--- a/test/integration/template relative includes/src/site/a/b/includes_partial.html.haml
+++ b/test/integration/template relative includes/src/site/a/b/includes_partial.html.haml
@@ -3,4 +3,4 @@
   @import "_included_relatively"
 
 %p From partial:
-= render "partial_with_embedded_relative_include"
+= partial "partial_with_embedded_relative_include"
