partial 'foo/bar' should search for foo/_bar, not _foo/bar

--- a/test/integration/partials/expected_output/subdir/subsubdir/menu.html
+++ b/test/integration/partials/expected_output/subdir/subsubdir/menu.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1>Menu</h1>
-<section><ul>
+<section>I am an exciting logo.
+
+<ul>
 <li>Delicious <b>smaragdine</b> pasta with unctious notes
 </li>
 <li>Delicious <b>fulvous</b> pasta with umami notes
