No implicit underscores for partials; _ prefix in ancestor dir now also makes file a partial

--- a/test/integration/partials/src/presentation/subdir/subsubdir/menu.html.haml
+++ b/test/integration/partials/src/presentation/subdir/subsubdir/menu.html.haml
@@ -1,6 +1,6 @@
 
-= partial :site, title: "Menu" do
-  = partial 'othersubsubdir/logo'  # should look for _logo, not _othersubsubdir
+= partial :_site, title: "Menu" do
+  = partial '_othersubsubdir/logo'
   %ul
-    %li= partial :menu_item, color: "smaragdine", flavor: "unctious"
-    %li= partial :menu_item, color: "fulvous", flavor: "umami"
+    %li= partial '_menu_item', color: "smaragdine", flavor: "unctious"
+    %li= partial :_menu_item, color: "fulvous", flavor: "umami"
