Added ability to include partial by item ID

--- a/test/integration/partials/src/presentation/subdir/subsubdir/menu.html.haml
+++ b/test/integration/partials/src/presentation/subdir/subsubdir/menu.html.haml
@@ -1,6 +1,6 @@
 
-= partial :_site, title: "Menu" do
+= partial '_site', title: "Menu" do
   = partial '_othersubsubdir/logo'
   %ul
     %li= partial '_menu_item', color: "smaragdine", flavor: "unctious"
-    %li= partial :_menu_item, color: "fulvous", flavor: "umami"
+    %li= partial '_menu_item', color: "fulvous", flavor: "umami"
